--- a/requirements1.txt
+++ b/requirements1.txt
@@ -1,10 +1,10 @@
-Flask==0.12.2
-xmltodict==0.11.0
 boto3==1.6.3
-python-dotenv==0.8.2
+Flask==0.12.2
+boto==2.48.0
 gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 Werkzeug==0.11.3
 wheel==0.24.0
+dotenvp
